force-app/main/default/objects/Opportunity/fields/AC_ContactAnomaly__c.field-meta.xml
<CustomField>
    <fullName>AC_ContactAnomaly__c</fullName>
    <formula>Primary_Contact__r.AccountId != AccountId
&amp;&amp; !ISBLANK(AccountId)
&amp;&amp; !ISBLANK(Primary_Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AC_ContactAnomaly</label>
    <type>Checkbox</type>
</CustomField>