force-app/main/default/objects/Opportunity/fields/AC_Recalc__c.field-meta.xml
<CustomField>
    <fullName>AC_Recalc__c</fullName>
    <inlineHelpText>This is an internal field which is bumped whenever the Account&#39;s province of residency changes, triggering a recalculation of the Scenario.</inlineHelpText>
    <label>AC_Recalc</label>
    <type>DateTime</type>
</CustomField>