force-app/main/default/objects/Opportunity/fields/Accident_Location_from_W2L__c.field-meta.xml
<CustomField>
    <fullName>Accident_Location_from_W2L__c</fullName>
    <label>Accident Location from W2L</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alberta</fullName>
            </value>
            <value>
                <fullName>British Columbia</fullName>
            </value>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>Manitoba</fullName>
            </value>
            <value>
                <fullName>New Brunswick</fullName>
            </value>
            <value>
                <fullName>Northwest Territories</fullName>
            </value>
            <value>
                <fullName>Nova Scotia</fullName>
            </value>
            <value>
                <fullName>Nunavut</fullName>
            </value>
            <value>
                <fullName>Prince Edward Island</fullName>
            </value>
            <value>
                <fullName>Quebec</fullName>
            </value>
            <value>
                <fullName>Saskatchewan</fullName>
            </value>
            <value>
                <fullName>Yukon Territory</fullName>
            </value>
            <value>
                <fullName>Newfoundland &amp; Labrador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>