force-app/main/default/objects/Opportunity/fields/Active_Loan__c.field-meta.xml
<CustomField>
    <fullName>Active_Loan__c</fullName>
    <formula>AND(  ISPICKVAL(StageName, &quot;Closed With Loan&quot;)  ,
        OR( ISPICKVAL(  Stage_Status__c  , &quot;Active - Partial Payment&quot;), 
            ISPICKVAL(  Stage_Status__c  , &quot;Active&quot;)
       )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A single flag to indicate if the Loan is considered &quot;Active&quot;.   Used to include/exclude from ELFI Portfolio reports.</inlineHelpText>
    <label>Active Loan</label>
    <type>Checkbox</type>
</CustomField>