force-app/main/default/objects/Opportunity/fields/Ad_hoc_Payment__c.field-meta.xml
<CustomField>
    <fullName>Ad_hoc_Payment__c</fullName>
    <label>Ad-hoc Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>