force-app/main/default/objects/Opportunity/fields/Added_Reminder_to_Team_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Added_Reminder_to_Team_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added Reminder to Team Calendar</label>
    <type>Checkbox</type>
</CustomField>