force-app/main/default/objects/Opportunity/fields/Admin_Fee_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Reversed__c</fullName>
    <label>Admin Fee Reversed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>