force-app/main/default/objects/Opportunity/fields/Admin_Fee_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Roll_up__c</fullName>
    <label>Admin Fee Roll-up</label>
    <summarizedField>Drawdown__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Drawdown__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Admin Fee, Assessment Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>