force-app/main/default/objects/Opportunity/fields/Administration_Fee_Received__c.field-meta.xml
<CustomField>
    <fullName>Administration_Fee_Received__c</fullName>
    <label>Administration Fee Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>