force-app/main/default/objects/Opportunity/fields/Amount_Currently_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Currently_Allocated__c</fullName>
    <formula>IF(ISPICKVAL(StageName, &#39;Re-Assessment&#39;), 0,
(IF(Admin_Fee_Roll_up__c - Admin_Fee_Reversed__c &gt; 0, 0, Admin_Fee__c)
+ Drawdown_Total_w_o_payments_and_provider__c
+ Total_Outstanding_Previous_Loans__c
+ IF(ISPICKVAL(Payment_Schedule__c, &quot;Yes&quot;), Payment_Scheduled_Allotment_Remaining__c, 0)
+ Scheduled_Non_Facility_Treatment_Total__c 
+ Total_Service_Providers_Allowance__c
- Principal_Reversed_wo_Providers__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Currently Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>