force-app/main/default/objects/Opportunity/fields/Amount_Paid_to_Assessment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_to_Assessment_Provider__c</fullName>
    <formula>Amount_Paid_to_Borrower__c  * (1 - Discount_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid to Assessment Provider</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>