force-app/main/default/objects/Opportunity/fields/Amount_Paid_to_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_to_Borrower__c</fullName>
    <label>Amount Paid to Borrower</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>