force-app/main/default/objects/Opportunity/fields/Amount_Paid_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_to_Client__c</fullName>
    <label>Amount Paid to Client</label>
    <summarizedField>Drawdown__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Drawdown__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Cheque, e-Transfer</value>
    </summaryFilterItems>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>