force-app/main/default/objects/Opportunity/fields/Amount_sent_from_current_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Amount_sent_from_current_Schedule__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount of scheduled payments processed from current version of payment schedule</description>
    <label>Amount sent from current Schedule</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>