force-app/main/default/objects/Opportunity/fields/Amount_to_existing_lender__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_existing_lender__c</fullName>
    <label>Amount to existing lender</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>