force-app/main/default/objects/Opportunity/fields/Amount_Unallocated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Unallocated__c</fullName>
    <formula>Amount - Amount_Currently_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Unallocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>