force-app/main/default/objects/Opportunity/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Client)</relationshipLabel>
    <relationshipName>Opportunities_Client</relationshipName>
    <type>Lookup</type>
</CustomField>