force-app/main/default/objects/Opportunity/fields/Applicant_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Full_Address__c</fullName>
    <formula>Applicant__r.MailingStreet + &#39;, &#39; +  Applicant__r.MailingCity + &#39;, &#39; + Applicant__r.MailingState + &#39; &#39; + Applicant__r.MailingPostalCode</formula>
    <label>Client Full Address</label>
    <type>Text</type>
</CustomField>