force-app/main/default/objects/Opportunity/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>Applicant__r.FirstName + &#39; &#39; +  Applicant__r.LastName</formula>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>