force-app/main/default/objects/Opportunity/fields/APR_1__c.field-meta.xml
<CustomField>
    <fullName>APR_1__c</fullName>
    <formula>0.2544</formula>
    <label>APR #1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>