force-app/main/default/objects/Opportunity/fields/APR_2__c.field-meta.xml
<CustomField>
    <fullName>APR_2__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Amount)),NOT(ISBLANK(Admin_Fee__c))),((Amount*0.24/2+(Amount+(Amount*0.24/2))*0.24/2+Admin_Fee__c)/Amount),0.00)</formula>
    <label>APR #2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>