force-app/main/default/objects/Opportunity/fields/APR_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>APR_Interest_Rate__c</fullName>
    <label>APR Interest Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>