force-app/main/default/objects/Opportunity/fields/Assessment_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Outstanding__c</fullName>
    <formula>Payout_Balance__c - Rebate_to_Lawyer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>