force-app/main/default/objects/Opportunity/fields/Assessment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Assessment Provider account must be of type Assessment Provider</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Assessment Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assessment Provider Referred Cases</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>

</CustomField>