force-app/main/default/objects/Opportunity/fields/Attorney_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Full_Address__c</fullName>
    <formula>Lawyer__r.MailingStreet + &#39;, &#39; +  Lawyer__r.MailingCity + &#39;, &#39; +  Lawyer__r.MailingState + &#39;, &#39; + Lawyer__r.MailingPostalCode</formula>
    <label>Lawyer Full Address</label>
    <type>Text</type>
</CustomField>