force-app/main/default/objects/Opportunity/fields/Attorney_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Law_Firm__c</fullName>
    <formula>Lawyer__r.Account.Name</formula>
    <label>Client Law Firm</label>
    <type>Text</type>
</CustomField>