force-app/main/default/objects/Opportunity/fields/Attorney_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Name__c</fullName>
    <formula>Lawyer__r.FirstName + &#39; &#39; +  Lawyer__r.LastName</formula>
    <label>Clients Name</label>
    <type>Text</type>
</CustomField>