force-app/main/default/objects/Opportunity/fields/Available_Credit__c.field-meta.xml
<CustomField>
    <fullName>Available_Credit__c</fullName>
    <formula>IF((Amount -  Admin_Fee__c -  Amount_Paid_to_Client__c )  &lt; 0 , 0 , (Amount -  Admin_Fee__c -  Amount_Paid_to_Client__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>