force-app/main/default/objects/Opportunity/fields/Bankruptcy_Details__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Details__c</fullName>
    <label>Bankruptcy Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>