force-app/main/default/objects/Opportunity/fields/Bankruptcy_on_File__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bankruptcy on File</label>
    <type>Checkbox</type>
</CustomField>