force-app/main/default/objects/Opportunity/fields/BIA_Information__c.field-meta.xml
<CustomField>
    <fullName>BIA_Information__c</fullName>
    <label>BIA Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>