force-app/main/default/objects/Opportunity/fields/Client_Opportuniy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Opportuniy_Notes__c</fullName>
    <label>Client / Opportuniy Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>