force-app/main/default/objects/Opportunity/fields/Client_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Client_Rebate__c</fullName>
    <formula>Rebate_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>