force-app/main/default/objects/Opportunity/fields/Client_Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Client_Rebate_Amount__c</fullName>
    <formula>IF(AND(Payout_Date__c &gt;= Effective_Date__c, Payout_Date__c &lt;= ADDMONTHS(Effective_Date__c, Rebate_Period__c)),
Payout_Balance__c *  Rebate_Discount__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Rebate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>