force-app/main/default/objects/Opportunity/fields/Compounding_Interest__c.field-meta.xml
<CustomField>
    <fullName>Compounding_Interest__c</fullName>
    <label>Interest Compounding Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interest_Compounding_Period__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>