force-app/main/default/objects/Opportunity/fields/Conga_URL_Doc_Base__c.field-meta.xml
<CustomField>
    <fullName>Conga_URL_Doc_Base__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?id=&quot; &amp; Id
&amp; &quot;&amp;TemplateID=&quot; &amp; Scenario__r.DocumentTemplate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga URL Doc Base</label>
    <type>Text</type>
</CustomField>