force-app/main/default/objects/Opportunity/fields/Conga_URL_Doc_Generate__c.field-meta.xml
<CustomField>
    <fullName>Conga_URL_Doc_Generate__c</fullName>
    <formula>IF(
OR(ISPICKVAL(Type_of_Loan__c,&quot;Treatment Loan&quot;),ISPICKVAL(Type_of_Loan__c,&quot;Treatment Loan 2&quot;))
,Conga_URL_Doc_Base__c &amp; &quot;&amp;DS7=3&amp;DefaultPDF=1&amp;QueryId=[Providers]a0p0L00000BB4vX?pv0=&quot; &amp; Id
,Conga_URL_Doc_Base__c &amp; &quot;&amp;DS7=3&amp;DefaultPDF=1&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga URL Doc Generate</label>
    <type>Text</type>
</CustomField>