force-app/main/default/objects/Opportunity/fields/Conga_URL_Doc_Send__c.field-meta.xml
<CustomField>
    <fullName>Conga_URL_Doc_Send__c</fullName>
    <formula>Conga_URL_Doc_Base__c
&amp; &quot;&amp;DS7=17&amp;DocuSignVisible=1&amp;QueryStringField=Docusign_Parameters__c&quot;
&amp; &quot;&amp;DocuSignR1Id=&quot; &amp; Primary_Contact__c
&amp; &quot;&amp;DocuSignR1Type=Signer&amp;DocuSignR1Role=Signer+1&amp;DocuSignR1RoutingOrder=1&quot;
&amp; &quot;&amp;DocuSignR2Id=&quot; &amp; Lawyer__c
&amp; &quot;&amp;DocuSignR2Type=Signer&amp;DocuSignR2Role=Signer+2&amp;DocuSignR2RoutingOrder=2&quot;
&amp; &quot;&amp;DocuSignEndPoint=NA3&amp;DocuSignBrandName=&quot; &amp; TEXT(Account.Business_Unit__c) &amp; &quot;Signing&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga URL Doc Send</label>
    <type>Text</type>
</CustomField>