force-app/main/default/objects/Opportunity/fields/Count_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Payments__c</fullName>
    <inlineHelpText>Provides a count of the payments.  Used in validation rules</inlineHelpText>
    <label>Count of Payments</label>
    <summaryFilterItems>
        <field>Drawdown__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>