force-app/main/default/objects/Opportunity/fields/Court_File_No__c.field-meta.xml
<CustomField>
    <fullName>Court_File_No__c</fullName>
    <label>Court File No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>