force-app/main/default/objects/Opportunity/fields/Court_File_No_Combined__c.field-meta.xml
<CustomField>
    <fullName>Court_File_No_Combined__c</fullName>
    <formula>Name_of_Court__c  + &#39;/&#39; +  Court_File_No__c</formula>
    <label>Court File No. Combined</label>
    <type>Text</type>
</CustomField>