force-app/main/default/objects/Opportunity/fields/Custommized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Custommized_Amount__c</fullName>
    <label>Custommized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>