force-app/main/default/objects/Opportunity/fields/Date_Bankruptcy_Search_Done__c.field-meta.xml
<CustomField>
    <fullName>Date_Bankruptcy_Search_Done__c</fullName>
    <label>Date Bankruptcy Search Done</label>
    <type>Date</type>
</CustomField>