force-app/main/default/objects/Opportunity/fields/Date_Financing_Statement_Done__c.field-meta.xml
<CustomField>
    <fullName>Date_Financing_Statement_Done__c</fullName>
    <label>Date Financing Statement Done</label>
    <type>Date</type>
</CustomField>