force-app/main/default/objects/Opportunity/fields/Date_Financing_Statement_Expires__c.field-meta.xml
<CustomField>
    <fullName>Date_Financing_Statement_Expires__c</fullName>
    <label>Date Financing Statement Expires</label>
    <type>Date</type>
</CustomField>