force-app/main/default/objects/Opportunity/fields/Date_Loan_Paid_Out__c.field-meta.xml
<CustomField>
    <fullName>Date_Loan_Paid_Out__c</fullName>
    <label>Date Loan Paid Out</label>
    <type>Date</type>
</CustomField>