force-app/main/default/objects/Opportunity/fields/Date_of_advance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_advance__c</fullName>
    <label>Date of advance</label>
    <summarizedField>Drawdown__c.Date__c</summarizedField>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>