force-app/main/default/objects/Opportunity/fields/Date_of_the_Accident_from_W2L__c.field-meta.xml
<CustomField>
    <fullName>Date_of_the_Accident_from_W2L__c</fullName>
    <label>Date of the Accident from W2L</label>
    <type>Date</type>
</CustomField>