force-app/main/default/objects/Opportunity/fields/Date_Payout_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Date_Payout_Valid_Until__c</fullName>
    <label>Date Payout Valid Until</label>
    <type>Date</type>
</CustomField>