force-app/main/default/objects/Opportunity/fields/Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Month__c</fullName>
    <label>Day of Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>15th</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>