force-app/main/default/objects/Opportunity/fields/Days_Outstanding_as_of_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Outstanding_as_of_To_Date__c</fullName>
    <formula>Reporting_To_Date__c - Date_of_advance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between first advance and reporting TO date</inlineHelpText>
    <label>Days Outstanding as of To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>