force-app/main/default/objects/Opportunity/fields/Deferred_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Revenue__c</fullName>
    <formula>Amount_Paid_to_Borrower__c - Amount_Paid_to_Assessment_Provider__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deferred Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>