force-app/main/default/objects/Opportunity/fields/Details_of_Accident_Incident__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Accident_Incident__c</fullName>
    <label>Details of Accident / Incident</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>