force-app/main/default/objects/Opportunity/fields/Did_ELF_buyout_the_Loan__c.field-meta.xml
<CustomField>
    <fullName>Did_ELF_buyout_the_Loan__c</fullName>
    <label>Did ELF buyout the Loan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>