force-app/main/default/objects/Opportunity/fields/Different_Balances__c.field-meta.xml
<CustomField>
    <fullName>Different_Balances__c</fullName>
    <formula>IF(Total_Payout__c &lt;&gt; Payout_Balance__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Different Balances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>