force-app/main/default/objects/Opportunity/fields/Docusign_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Parameters__c</fullName>
    <description>This field is used as a parameter in the Send Loan Document button.</description>
    <formula>&quot;&amp;DocuSignR1EmailSubject=&quot;&amp;Name&amp;&quot;+Loan+Documents&amp;DocuSignR1EmailBlurb=&quot;&amp;Name&amp;&quot;,%0A%0AAttached+are+your+&quot; &amp; IF(ISPICKVAL(Account.Business_Unit__c,&quot;Rhino&quot;),&quot;Rhino+Legal+Finance&quot;, &quot;Easy+Legal+Finance&quot;) &amp; &quot;+loan+documents.+%0A%0APlease+review+the+attached+documents+and+sign+electronically,+where+specified.+As+soon+as+we+receive+your+signed+copies,+they+will+be+forwarded+directly+to+your+legal+representative.+%0A%0AShould+you+have+any+questions+or+concerns,+please+do+not+hesitate+to+contact+us.&amp;DocuSignR2EmailSubject=&quot;&amp;Name&amp;&quot;+Loan+Documents&amp;DocuSignR2EmailBlurb=Your+client+&quot;&amp;Name&amp;&quot;+has+been+approved+for+a+loan+with+&quot; &amp; IF(ISPICKVAL(Account.Business_Unit__c,&quot;Rhino&quot;),&quot;Rhino+Legal+Finance&quot;, &quot;Easy+Legal+Finance&quot;) &amp; &quot;+Inc.+%0A%0AIn+order+for+us+to+finalize+your+client&#39;s+loan+application,+kindly+review+the+attached+documents+and+sign+electronically,+where+specified.+Your+client&#39;s+signatures+have+already+been+captured.+As+soon+as+you+sign-off+on+these+documents,+the+funds+will+be+transferred+into+your+client&#39;s+bank+account.+%0A%0AShould+you+have+any+questions+or+concerns,+please+do+not+hesitate+to+contact+us.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for docusign email messaging.</inlineHelpText>
    <label>Docusign Parameters</label>
    <type>Text</type>
</CustomField>