force-app/main/default/objects/Opportunity/fields/Docusign_Parameters_Loan_App__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Parameters_Loan_App__c</fullName>
    <formula>&quot;&amp;DocuSignR1EmailSubject=&quot;&amp;Primary_Contact__r.FirstName&amp;&quot;+Loan+Application&amp;DocuSignR1EmailBlurb=&quot;&amp;Primary_Contact__r.FirstName&amp;&quot;%0A%0AThank+you+for+your+interest+in+a+settlement+loan+with+&quot; &amp; IF(ISPICKVAL(Account.Business_Unit__c,&quot;Rhino&quot;),&quot;Rhino+Legal+Finance&quot;, &quot;Easy+Legal+Finance&quot;) &amp; &quot;+Inc.,+as+well+as+your+time+on+the+telephone+today.+I+have+attached+your+application+to+this+email.+%0A%0APlease+follow+the+instructions below:+%0A++++-+Provide+two+pieces+of+ID%0A++++-+Review+your+information+in+Section+I+(please+notify+us+of+any+corrections)%0A++++-+Sign+electronically+where+indicated+%0A%0APlease+do+not+hesitate+to+contact+me+if+you+have+any+questions+or+concerns+regards+your+application+process.&quot;</formula>
    <inlineHelpText>Field used to send email blurb to DS silently</inlineHelpText>
    <label>Docusign Parameters Loan App</label>
    <type>Text</type>
</CustomField>